# MicroPython_MMA8451

./: README.rst  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: mma8451_data_rate.py  mma8451_high_pass_filter_cutoff.py  mma8451_operation_mode.py  mma8451_scale_range.py  mma8451_simpletest.py
micropython_mma8451/: mma8451.py
