# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "micropython-mma8451"
description = "MicroPython module for the MMA8451 3 axis accelerometer"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "JDM", email = "xxyx@mailmeto.mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/MicroPython_MMA8451"}
keywords = [
    "sensor",
    "micropython",
    "mma8451",
    "micropython",
    "driver",
    "sensor",
    "mma8451",
    "mma8451q",
    "acceleration",
    "gravity",
    "accelerometer",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: MicroPython",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["micropython_mma8451"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
